--- a/src/sass/theme/_djMain.scss
+++ b/src/sass/theme/_djMain.scss
@@ -306,6 +306,9 @@ input:focus, select:foucs {
   max-height: 460px;
   height: 460px;
 }
+.strikethrough{
+  text-decoration:line-through;
+}
 .modal .modal-dialog.modal-top-center-500
 {
   width: 600px;
