--- a/src/app/pages/attendance/masters/list/mastersList.html
+++ b/src/app/pages/attendance/masters/list/mastersList.html
@@ -37,7 +37,7 @@
 
                     <div class="row">
                         <div class="col-md-12">
-                            <div ui-grid="weekGridOptions" ui-grid-expandable ui-grid-selection ui-grid-edit></div>
+                            <div ui-grid="weekGridOptions"ui-grid-edit ui-grid-expandable ui-grid-auto-resize ui-grid-selection class="grid" ></div>
                         </div>
                     </div>
                     <div class="row">
