--- a/src/app/pages/attendance/shiftmaster/shiftmaster.html
+++ b/src/app/pages/attendance/shiftmaster/shiftmaster.html
@@ -148,7 +148,7 @@
                     <label for="inputPassword3 ">{{page.pageinfo.fields.SMMinimumHourForHalfDay.text}}</label>
                     <!--<input class="form-control" type="text" ng-model="entity.SMMinimumHourForHalfDay">-->
                 </div>
-                <div class="form-group col-md-4">
+                <div class="form-group col-md-3">
                     <field-box page="page" ng-column="page.pageinfo.fields.SMMinimumHourForHalfDay " ng-entity="entity " form="editForm "></field-box>
                 </div>
             </div>
@@ -156,7 +156,7 @@
             <div class="row" ng-if="entity.SMMinimumDurationForHalfOrFullDay">
                 <div class="form-group col-md-5 col-md-offset-1">
                     <label for="inputPassword3 ">{{page.pageinfo.fields.SMMinimumHourForFullDay.text}}</label> </div>
-                <div class="form-group col-md-4">
+                <div class="form-group col-md-3">
                     <field-box page="page" ng-column="page.pageinfo.fields.SMMinimumHourForFullDay " ng-entity="entity " form="editForm "></field-box>
                 </div>
             </div>
@@ -169,6 +169,23 @@
                          <span style="font:bold">{{page.pageinfo.fields.SMShiftFlexibility.place}}</span>
                      </label>
             </div>
+
+            <div class="row">
+                <div class="form-group col-md-4">
+                    <label for="inputPassword3 ">{{page.pageinfo.fields.SMMinWorkCrtFWeekOffCr.text}}</label> </div>
+                <div class="form-group col-md-3">
+                    <field-box page="page" ng-column="page.pageinfo.fields.SMMinWorkCrtFWeekOffCr " ng-entity="entity " form="editForm "></field-box>
+                </div>
+            </div>
+
+            <!--<div class="text">
+                <div class="custom-input-primary">
+                    <span style="font:bold"></span>
+                    <label for="inputPassword3 ">
+                    <field-box page="page" ng-column="page.pageinfo.fields.SMMinWorkCrtFWeekOffCr " ng-entity="entity " form="editForm "></field-box>
+                    </label>
+                </div>
+            </div>-->
 
 
 
