--- a/src/app/pages/leave/transaction/leavestatement/leave.leavestatement.html
+++ b/src/app/pages/leave/transaction/leavestatement/leave.leavestatement.html
@@ -40,14 +40,14 @@
                 </div>
                 <div class="form-group col-md-1 ">
                     <!--<input type="radio" name="commoncreditAndDebit " fb-change="creditAndDebitValue()" id="creaditLeave" ng-model="creditAndDebitCR" value="credits ">-->
-                    <input type="radio" name="commoncreditAndDebit " ng-model="creditAndDebitCR" value="credits">
+                    <input type="radio" name="commoncreditAndDebit " ng-click="entity.ELTLeaveDr=0" ng-model="creditAndDebitCR" value="credits">
                 </div>
                 <div class="form-group col-md-2 ">
                     <label for="inputPassword3 ">Debit</label>
                 </div>
                 <div class="form-group col-md-1 ">
                     <!--<input type="radio" name="commoncreditAndDebit " fb-change="creditAndDebitValue()" ng-model="creditAndDebitDR" id="debitLeave" value="debits ">-->
-                    <input type="radio" name="commoncreditAndDebit " ng-model="creditAndDebitCR" value="debits">
+                    <input type="radio" name="commoncreditAndDebit " ng-click="entity.ELTLeaveCr=0"  ng-model="creditAndDebitCR" value="debits">
                 </div>
                 <div class="form-group col-md-3 ">
                 </div>
