--- a/src/app/pages/payroll/empPayband/empPayband.html
+++ b/src/app/pages/payroll/empPayband/empPayband.html
@@ -3,6 +3,7 @@
 
     <div class="panel-heading">
         Employees Payband Entitilement
+        <button ng-show="gridShow" ng-click="saveEmpPayband()" class="btn btn-xs btn-default pull-right">save</button>
     </div>
     <div class="panel-body">
         <div class="row">
