--- a/src/app/pages/attendance/transaction/verify/attendance.verify.html
+++ b/src/app/pages/attendance/transaction/verify/attendance.verify.html
@@ -2,7 +2,7 @@
     <grid-box ng-model="page">
     </grid-box>
 </div>
-<div ng-hide="attVerifyCtrl.showVerifyAttendance">
+<div ng-hide="attVerifyCtrl.showVerifyAttendance" width=100%>
     <grid-box ng-model="editPage">
     </grid-box>
 </div>
